add gitignore, chunk_counter binary
Renamed image file
refactored main file

--- a/png/Makefile
+++ b/png/Makefile
@@ -1,2 +1,5 @@
 all: main.c 
 	gcc --std=c89 main.c -o parse
+
+counter: chunk_counter.c png_parser.c
+	gcc --std=c89 chunk_counter.c png_parser.c -o $@
